# Skill-Swap-websites-with-django-

./: README.md  settings.pages
skillswap/: db.sqlite3  main.py  pyproject.toml
skillswap/adminPanel/: urls.py  views.py
skillswap/api/: urls.py
skillswap/api/services/: services.py
skillswap/api/utils/: distance.py
skillswap/api/views/: search.py  skill_autocomplete.py
skillswap/core/: urls.py  views.py
skillswap/core/templates/core/: index.html  skill_search.html
skillswap/masterData/: apps.py  forms.py  urls.py
skillswap/masterData/views/: city.py  country.py  district.py  language.py
skillswap/skill/: forms.py  urls.py
skillswap/skill/services/: pdf_generator.py
skillswap/skill/views/: exchange.py  rate.py  search.py  skill.py  skillCategory.py  skillSwap.py  userSkill.py
skillswap/skillswap/: settings.py  signals.py  urls.py  views.py
skillswap/skillswap/middleware/: login_required.py  user_logs.py
skillswap/skillswap/scripts/: init_groups.py
skillswap/static/css/: crud.css  profile_img.css
skillswap/static/images/logo/: logo.ai
skillswap/users/: admin.py  apps.py  context_processors.py  forms.py  signals.py  urls.py  views.py
skillswap/users/migrations/: 0001_initial.py
skillswap/users/models/: City.py  ContactMessage.py  Country.py  ExchangeDocument.py  ExchangeNegotiation.py  SkillCategory.py  SkillVerification.py  UserBlockList.py  UserSkill.py  __init__.py  activityLog.py  address.py  comment.py  district.py  exchange.py  exchangeRequest.py  language.py  rating.py  skill.py  socialMediaLink.py  systemLog.py  user.py
(+52 files in other folders)
