[project]
name = "skillswap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "djangorestframework>=3.16.1",
    "faker>=40.4.0",
    "geopy>=2.4.1",
    "mysqlclient>=2.2.7",
    "pillow>=12.0.0",
    "reportlab>=4.4.9",
    "requests>=2.32.5",
]
